# LIveWire_OpenCV

./: .gitignore  CMakeLists.txt  LiveWire_OCV_DragContour.cpp  LiveWire_OCV_DragContour2.cpp  LiveWire_OCV_Test.cpp  LiveWire_OCV_Test2.cpp  README.md  lwocv.cpp  lwocv.h
